--- a/WebContent/WEB-INF/views/index.html
+++ b/WebContent/WEB-INF/views/index.html
@@ -55,7 +55,7 @@
             <section data-role="content">
                 <form data-ajax="false">
                     <label>Nombre de la Materia:</label>
-                    <input type="text" id="iptMateria" required="required" pattern="^[A-Za-z0-9\sÁÉÍÓÚÑáéíóúñ]{1,99}$"/>
+                    <input type="text" id="iptMateria" required="required" pattern="^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$"/>
                     <label>N&uacutemero de Cupos M&aacuteximo</label>
                     <input type="number" id="iptNumMaxCupo" required="required" max="99" min="1" pattern="^[0-9]{1,2}$"/>
                     <input data-icon="edit" data-theme="b" type="button" id="btnGuardarMateria" value="Guardar">
@@ -128,7 +128,11 @@
     window.addEventListener('load', () => {
         //
         let entradaFoto = document.querySelector('#iptFoto');
-        entradaFoto.addEventListener('change', desplegarFoto);
+        entradaFoto.addEventListener('change', () => {
+            if (desplegarFoto() == false) {
+                entradaFoto.value = "";
+            }
+         });
         
         //
         let accionGuardar = document.querySelector("#btnGuardar");   	 	
@@ -154,10 +158,10 @@
 
         //
         let paginaAlumnoMateria = document.querySelector("#registrar_alumno_materia");
-        paginaAlumnoMateria.addEventListener('click', ()=>{
+        paginaAlumnoMateria.addEventListener('click', ()=> {
+
             recibirDatosMaterias("listarMateria");
             recibirDatosAlumnos("listarAlumno");        
-            let id_alumno = alumnoSeleccionado.value;
             
         });
 
@@ -169,6 +173,7 @@
             recibirDatosMaterias("listarMateria");
         	let materias = JSON.parse(m);
         	
+        	let id_alumno = alumnoSeleccionado.value
         	//limpiar el fieldset :P
         	desplegarMaterias(materias);	
             //buscarMateriasOcupadas("listarCupoMaximos")
@@ -180,7 +185,6 @@
     let buscarMateriasOcupadas = (ruta) => {
         fetch(ruta, {
             method: "GET",
-            //body : JSON.stringify(datosAlumnoMaterias),
             headers : {
                 'Content-Type' : 'application/json'
             }
@@ -472,7 +476,9 @@
         let entradaFoto = document.querySelector('#iptFoto');
         let archivo = entradaFoto.files;
         let blob = new Blob(archivo, {type : 'image/jpeg'})
+        console.log(archivo)
         
+
         lector.readAsBinaryString(blob);
         lector.onload = () => {
             let jpge64 = window.btoa(lector.result);
@@ -503,7 +509,7 @@
         let valido = 4;
 
         if (materia["nombre"].length > 0) {
-            let validaMateria = new RegExp("^[A-Za-z0-9\sÁÉÍÓÚÑáéíóúñ]{1,99}$");
+            let validaMateria = /^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$/
             let esValido = validaMateria.exec(materia["nombre"]);
         	if (esValido == null) {
         		alert("El nombre de la materia no ha sido validado.");
@@ -532,7 +538,7 @@
         let valido = 64;
 
         if (alumno["nombre"].length > 0 ) {
-        	let validaNombre = new RegExp("^[A-Za-z0-9\sÁÉÍÓÚÑáéíóúñ]{1,99}$");
+        	let validaNombre = /^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$/
         	let esValido = validaNombre.exec(alumno["nombre"]);
         	if (esValido == null) {
         		alert("El nombre del alumno no ha sido validado.");
@@ -541,7 +547,7 @@
         	}
         } 
         if (alumno["apellidoPaterno"].length > 0)  {
-        	let validaApellidoPaterno = new RegExp("^[A-Za-z0-9\sÁÉÍÓÚÑáéíóúñ]{1,99}$");
+        	let validaApellidoPaterno = /^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$/
         	let esValido = validaApellidoPaterno.exec(alumno["apellidoPaterno"]);
         	if (esValido == null) {
         		alert("El apellido paterno del alumno no ha sido validado.");
@@ -550,7 +556,7 @@
         	}
         }
         if (alumno["apellidoMaterno"].length > 0)  {
-        	let validaApellidoMaterno = new RegExp("^[A-Za-z0-9\sÁÉÍÓÚÑáéíóúñ]{1,99}$");
+        	let validaApellidoMaterno = /^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$/
         	let esValido = validaApellidoMaterno.exec(alumno["apellidoMaterno"]);
         	if (esValido == null) {
         		alert("El apellido materno del alumno no ha sido validado.");
@@ -626,6 +632,21 @@
         catch(error => alert(error));
     }
 
+
+    let validarFotoAlumno = (archivo) => {
+        let valido = 2;
+        if (archivo.type != 'image/jpeg') {
+            alert("El archivo que ha seleccionado no es un formato jpeg.")
+            return
+        }
+        if (archivo.size > 555000) {
+            alert("El tamaño de la imagan sobrepasa los 555 kb.")
+            return
+        } 
+        else  valido >>= 1;
+        return valido;
+    }
+
     let desplegarFoto = () => {
         /**
         * Despliega la foto de alumno una vez haya sido seleccionada.
@@ -642,8 +663,12 @@
         let archivo = entradaFoto.files;    
         let foto = document.createElement('img');
         foto.setAttribute("width", "100%");
-        foto.src = URL.createObjectURL(archivo[0]);
-        lienzo.appendChild(foto);
+        let valido = validarFotoAlumno(archivo[0])
+        
+        if (valido == 1) {
+            foto.src = URL.createObjectURL(archivo[0]);
+            lienzo.appendChild(foto);
+        } else return false;    
     }
     </script>  
     </body>
