--- a/WebContent/WEB-INF/views/index.html
+++ b/WebContent/WEB-INF/views/index.html
@@ -21,6 +21,7 @@
                     <li><a href="#registrar_alumno_materia" id="registrar_alumno_materia">Asignar Materias</a></li>
                     <li data-role="list-divider">Materias</li>
                     <li><a href="#registrar_materia">Registrar Materia</a></li>
+                    <li><a href="#registrar_materia">Editar Materia</a></li>
                 </ul>
             </nav>
             
