--- a/WebContent/WEB-INF/views/asignar_materias.html
+++ b/WebContent/WEB-INF/views/asignar_materias.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.1.min.js" rel="extenal"></script>
+        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js" rel="extenal"></script>
     </head>
 
     <body>
@@ -13,7 +13,7 @@
         <div data-role="page" id="asignar_materias" data-dom-cache="false">
             <!--Encabezado-->
             <header data-role="header" data-theme="b">
-                <a href="index.html" data-icon="back" data-iconpos="notext"> </a>
+                <a href="/App00/" data-icon="back" data-iconpos="notext"> </a>
                 <h1>Asignar Materias</h1>
             </header>
 
@@ -30,5 +30,152 @@
     </body>
 
     <script>
+        window.addEventListener('load', () => {
+            let paginaAlumnoMateria = document.querySelector("#registrar_alumno_materia");
+            paginaAlumnoMateria.addEventListener('click', ()=> {
+
+                recibirDatosMaterias("listarMateria");
+                recibirDatosAlumnos("listarAlumno");        
+            });    
+
+            //Evento cambio de materia
+            let materiaSeleccionada = document.querySelector("#comboMaterias");
+            materiaSeleccionada.addEventListener('change', () => {
+                let id_materia = materiaSeleccionada.value
+        	    alert(id_materia);
+                //POR DEFINIR RUTA DEL CONTROLADOR,
+                if (id_materia > 0)	consultarMateria("listarConsultaMateria/"+id_materia);
+            });    
+        });
+
+        //capturarDatosAlumnoMateria
+        let capturarDatosAlumnoMateria = () => {
+            let alumnoSeleccionado = document.querySelector("#comboAlumnos")
+            let id_alumno = alumnoSeleccionado.value
+            
+            let _materias = localStorage.getItem("Materias");
+            let materias = JSON.parse(_materias);
+            
+            let AlumnoMaterias = [];
+            
+            materias.forEach(materia => {
+                let id_materia = materia.id_materia;
+                let selectMateria = document.getElementById(id_materia);
+                
+                if (selectMateria.hasAttribute("checked") || selectMateria.hasAttribute("data-cacheval") ) {
+                    let alumnoMateria = {
+                            'id_alumno' : id_alumno,
+                            'id_materia' : id_materia
+                    }
+                    AlumnoMaterias.push(alumnoMateria);	        		
+                }
+                
+                if (selectMateria.getAttribute('data-cacheval') == "true") {
+                    for (let i=0; i < AlumnoMaterias.length; i ++ ) {
+                        let _idAlumnoMateria = AlumnoMaterias[i].id_materia;					
+                        if (_idAlumnoMateria == id_materia) {	
+                            AlumnoMaterias.splice(i,1);
+                        }
+                    }
+                }
+                
+            });
+            
+            if (AlumnoMaterias.length <= 0) {
+            let alumnoMateria = {
+                    'id_alumno' : id_alumno,
+                    'id_materia' : "0"
+                }
+                AlumnoMaterias.push(alumnoMateria);	
+            }
+        
+            if (id_alumno == 0) alert("Aun no se ha seleccionado el alumno.");
+            else enviarDatosAlumnoMateria("agregarAlumnoMateria", AlumnoMaterias);
+        };
+
+        //buscarAlumnoMateria
+        let buscarAlumnoMateria = (ruta) => {
+            /**
+            * Busca las materias las cuales esten asociadas al alumno.
+            * Si no tiene asociada materias, el sistema deberá regresar una lista vacia.
+            */
+            fetch(ruta, {
+                method : 'GET',
+                headers : {
+                    'Content-Type' : 'application/json'
+                }
+            }).
+            then(respuesta => {
+                return respuesta.json();
+            }).
+            then((data) => {
+                desplegarAlumnoMaterias(data);
+            }).
+            catch(error => {
+                alert(error);
+            });
+        }
+
+        //desplegarDatosMaterias    
+        let desplegarAlumnoMaterias = (lstAlumnoMaterias) => {
+            /**
+            * 
+            */
+                
+            if (lstAlumnoMaterias.length > 0 ) {	
+                lstAlumnoMaterias.forEach(alumnoMateria => {
+                    let idMateria = alumnoMateria.id_materia;
+                    let input = document.getElementById(idMateria);
+                    input.setAttribute("checked", "checked")
+                    input.removeAttribute("data-cacheval");	
+                });
+                $("#fieldMaterias").trigger("create");
+            } else {
+                alert("EL alumno aun no tiene materias asociadas.")
+            }
+        }
+        
+        //enviarDatosAlumnoMateria
+        let enviarDatosAlumnoMateria = (ruta, datosAlumnoMaterias) => {
+            fetch(ruta, {
+                method: "POST",
+                body : JSON.stringify(datosAlumnoMaterias),
+                headers : {
+                    'Content-Type' : 'application/json'
+                }
+            }).
+            then(respuesta => {
+                return respuesta.json();                    	
+            }). 
+            then( data => {
+                alert("Se han actualizado las materias del alumno.");
+            })
+            .catch( error => alert(error));
+        }
+
+        //buscarMariasOcupadas
+        let buscarMateriasOcupadas = (ruta, id_alumno) => {
+            fetch(ruta, {
+                method: "GET",
+                headers : {
+                    'Content-Type' : 'application/json'
+                }
+            }).
+            then(respuesta => {
+                return respuesta.json();                        
+            }). 
+            then( data => {
+                
+                
+                data.forEach(alumnoMateria => {
+                    if (id_alumno !=  alumnoMateria[1]) {
+                        let input = document.getElementById(alumnoMateria[0]);
+                        input.setAttribute("disabled","disabled");
+                    }
+                });
+                
+            })
+            .catch( error => alert(error));
+        }
     </script>
 </html>
