--- a/WebContent/WEB-INF/views/editar_materia.html
+++ b/WebContent/WEB-INF/views/editar_materia.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js" rel="external"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js" rel="external"></script>
+        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     </head>
 
     <body>
@@ -25,6 +25,9 @@
                 </select>
                     
                 <form data-ajax="false">
+                    <label>Clave:</label>
+                    <input type="text" id="iptIdMateria" disabled="disabled"/>
+                                        
                     <label>Nombre de la Materia:</label>
                     <input type="text" id="iptMateria" required="required" pattern="^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$"/>
                     <label>N&uacutemero de Cupos M&aacuteximo</label>
@@ -38,49 +41,150 @@
     <script>
         window.addEventListener('load', () => {
             //
-            let paginaEditarMateria = document.querySelector("#editar_materia");
-            paginaEditarMateria.addEventListener('click', () => {
+            //let paginaEditarMateria = document.querySelector("#editar_materia");
+            //paginaEditarMateria.addEventListener('click', () => {
                 obtenerDatosMaterias("listarMateria");
-            });
+            //});
 
-            let alumnoSeleccionado = document.querySelector("#comboAlumnos");
-            alumnoSeleccionado.addEventListener('change', () => {
+            let materiaSeleccionada = document.querySelector("#comboMaterias");
             
-                let m = localStorage.getItem("Materias")
-                recibirDatosMaterias("listarMateria");
-                let materias = JSON.parse(m);
+            materiaSeleccionada.addEventListener('change', () => {
+            
+                //let m = localStorage.getItem("Materias")
+                //recibirDatosMaterias("listarMateria");
+                //let materias = JSON.parse(m);
                 
-                let id_alumno = alumnoSeleccionado.value
+                let id_materia = materiaSeleccionada.value
                 //limpiar el fieldset :P
-                desplegarMaterias(materias);	
-                buscarMateriasOcupadas("listarCupoMaximoPorAlumno", id_alumno)
-          //recibirDatosMateria
-    let recibirDatosMaterias = (ruta) => {
-        /**
-        * 
-        */
-        fetch(ruta, {
-            method : 'GET',
-        // mode : "no-cors",
-            headers : {
-                'Content-Type' : 'application/json'
-            }
-        }).
-        then(respuesta => {
-            return respuesta.json();
-        }).then ((data) => {
-        		
-        	localStorage.setItem("Materias", JSON.stringify(data)); //////////////////////////////////////////////////////////////////////////////////////
-            desplegarMaterias(data);
-        }).
-        catch(error => {
-            alert(error);
-        });
-    }      if (id_alumno > 0)	buscarAlumnoMateria("consultarAlumno/"+id_alumno);
+                //desplegarMaterias(materias);	
+                //buscarMateriasOcupadas("listarCupoMaximoPorAlumno", id_alumno)
+                
+                
+                if (id_materia > 0)	consultarMateria("listarConsultaMateria/"+id_materia);
             });
+            
+        });  
+      	//consultarMateria
+        let consultarMateria = (ruta) => {
+        	fetch(ruta, {
+        	    method : 'GET',
+        	    headers : {
+        	    	'Content-Type' : 'application/json'
+        	    	}
+        	    }).
+        	    then(respuesta => {
+        	    	return respuesta.json();
+        	    }).then ((data) => {
+        	    	desplegarMateria(data);
+        	    }).
+        	    catch(error => {
+        	    	alert(error);
+        	    });
+        }
+        //
+        let desplegarMateria = (materia) => {
+	    	/**
+	    	* Desplegará los datos de la materia, en el cual se mostrará el nombre de la materia y el número máximo de cupos
+	    	**/
+	    	document.getElementById("iptMateria").value = materia.nombre;
+	    	document.getElementById("iptNumMaxCupo").value = materia.numMaxCupo;
+	    	document.getElementById("iptIdMateria").value = materia.id_materia;
+	    	
+	    	//Envento actualizar materia
+	        
+	        let btnEditarMateria = document.querySelector("#btnEditarMateria");
+	    	btnEditarMateria.addEventListener('click', () => {
+	    		capturarDatosMateria()
+	    	});
+    	}
+        
+      //caputurarDatosMateria
+        let capturarDatosMateria = () => {
+        /**
+        * Captura los datos de las materia y confirma que al menos hayan sido capturados los datos.
+        */
+            let nombre = document.getElementById("iptMateria").value;
+            let numMaxCupo = document.getElementById("iptNumMaxCupo").value;
+            let idMateria = document.getElementById("iptIdMateria").value;
+            
+            
+            let materia = {
+                "nombre" : nombre,
+                "numMaxCupo" : numMaxCupo,
+            	"id_materia" : idMateria
+            }
+            console.log(materia)
+            let valido = validarDatosMateria(materia);
+                
+            if (valido === 1 ) {
+            	enviarDatosMateria("editar_materia", materia);	
+            } else {
+                alert("Capture todos los campos.")
+            }
 
-        });
+    	}
 
+        let validarDatosMateria = (materia) => {
+            /**
+            * Valida que los datos de la materia no esten vacios.
+            */
+            let valido = 4;
+
+            if (materia["nombre"].length > 0) {
+                let validaMateria = /^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$/
+                let esValido = validaMateria.exec(materia["nombre"]);
+                
+                if (esValido == null) {
+                    alert("El nombre de la materia no ha sido validado.");
+                } else {
+                    valido >>= 1;		
+                }
+            }
+            if (materia["numMaxCupo"].length > 0) {
+                let validaNumMaxCupo = /^[0-9]{1,2}$/
+                let esValido = validaNumMaxCupo.exec(materia["numMaxCupo"]);
+                
+                if (esValido == null || materia["numMaxCupo"] <= 0) {
+                    alert("El número de cupos no ha sido validado.");
+                } else {
+                    valido >>= 1;		
+                }
+            } 
+            
+            console.log(valido);
+            return valido;
+        }
+
+		//enviarDatosMateria        
+        let enviarDatosMateria = (ruta,datosMateria) => {
+            /**
+            * Envia un objecto json al servidor con los datos de la materia.
+            */
+            fetch(ruta, {
+                method : "PUT",
+                body : JSON.stringify(datosMateria),
+                headers : {
+                    'Content-Type' : 'application/json'
+                }
+            }).
+            then(respuesta => {
+                console.log(respuesta);
+                if (respuesta.ok == true) {
+                    if (respuesta.status == 200) alert("La materia ha sido actualizada.")
+                    location.reload("/");
+                } else {
+                    alert("No se ha podido actualizar la materia.");
+                }
+                
+            }).
+            catch(error => alert(error));
+        } 
+
+        
+        
+        /////////////////////////////////////////////////////////////////////////
+        
+       
         //obtenerDatosMateria
         let obtenerDatosMaterias = (ruta) => {
             fetch(ruta, {
@@ -98,7 +202,29 @@
                 alert(error);
             });
 	    }  
+		
+        let desplegarComboMaterias = (lstMaterias) => {
+        	/**
+        	* Desplegará las materias que esten registradas, las cuales se mostrarán en un compotente combox.
+        	*/
 
+        	let otnMateria = ``;
+        	let i = 0;
+        	
+        	lstMaterias.forEach(materia => {
+        		
+        		if (i == 0) otnMateria += `<option value="0">SELECCIONE LA MATERIA.</option>`
+    			otnMateria += `<option value=${materia.id_materia}>${materia.nombre}</option>` 
+        		i ++;
+        	
+        	});
+        	
+        	let comboMaterias = document.querySelector("#comboMaterias");
+        	let sltMaterias = `<select>${otnMateria}</select>`;
+        	comboMaterias.innerHTML = sltMaterias; 
+        }
+     
+        
         //actualizarDatosMateria
         let actualizarDatosMateria = (ruta, datosMateria) => {
             /**
@@ -123,30 +249,6 @@
             }).
             catch(error => alert(error));
    	    }
-
-        //recibirDatosMateria
-        let recibirDatosMaterias = (ruta) => {
-            /**
-            * 
-            */
-            fetch(ruta, {
-                method : 'GET',
-            // mode : "no-cors",
-                headers : {
-                    'Content-Type' : 'application/json'
-                }
-            }).
-            then(respuesta => {
-                return respuesta.json();
-            }).then ((data) => {
-                    
-                localStorage.setItem("Materias", JSON.stringify(data)); //////////////////////////////////////////////////////////////////////////////////////
-                desplegarMaterias(data);
-            }).
-            catch(error => {
-                alert(error);
-            });
-        }  
 
         //desplegarMaterias
         let desplegarMaterias = (lstMaterias) => {
@@ -174,8 +276,6 @@
             //EvENTOS
             let accionGrabarAlumnoMateria = document.querySelector("#btnGrabarAlumnoMaterias");
             accionGrabarAlumnoMateria.addEventListener('click', capturarDatosAlumnoMateria);
-        
         }         
     </script>
-
 </html>              
