--- a/WebContent/WEB-INF/views/registrar_materia.html
+++ b/WebContent/WEB-INF/views/registrar_materia.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <meta charset="utf-8" />
+        
+        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Registrar Materia</title>
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js" rel="external"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js" rel="external"></script>
+        <script src="http://code.jquery.com/jquery-1.11.1.min.js" ></script>
+        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js" ></script>
     </head>
 
     <body>
-        <!--PÃ¡gina registar materia-->
+        <!--Página registar materia-->
         <div data-role="page" id="registrar_materia">
             <!--Encabezado-->
             <header data-role="header" data-theme="b">
@@ -19,6 +21,7 @@
 
             <!--Contenido-->
             <section data-role="content">
+                <h2>Registrar Materia</h2>
                 <form data-ajax="false">
                     <label>Nombre de la Materia:</label>
                     <input type="text" id="iptMateria" required="required" pattern="^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$"/>
@@ -35,37 +38,33 @@
             window.addEventListener('load', () => {
                 let accionGuardarMateria = document.querySelector("#btnGuardarMateria");
                 accionGuardarMateria.addEventListener('click', () => {
-        	        capturarDatosMateria("POST")
+        	        capturarDatosMateria()
                 });
             })
 
 
             //caputurarDatosMateria
-            let capturarDatosMateria = (accion) => {
+            let capturarDatosMateria = () => {
             /**
             * Captura los datos de las materia y confirma que al menos hayan sido capturados los datos.
             */
-            let nombre = document.getElementById("iptMateria").value;
-            let numMaxCupo = document.getElementById("iptNumMaxCupo").value;
-            
-            let materia = {
-                "nombre" : nombre,
-                "numMaxCupo" : numMaxCupo
-            }
-            console.log(materia)
-            let valido = validarDatosMateria(materia);
-                
-            if (valido === 1 ) {
-                if (accion === "POST") {
-                    enviarDatosMateria("agregarMateria", materia);	
-                } else if (accion === "PUT") {
-                    actualizarDatosMateria("actualizarMateria", materia)
-                }
-            } else {
-                alert("Capture todos los campos.")
-            }
+	            let nombre = document.getElementById("iptMateria").value;
+	            let numMaxCupo = document.getElementById("iptNumMaxCupo").value;
+	            
+	            let materia = {
+	                "nombre" : nombre,
+	                "numMaxCupo" : numMaxCupo
+	            }
+	            console.log(materia)
+	            let valido = validarDatosMateria(materia);
+	                
+	            if (valido === 1 ) {
+	            	enviarDatosMateria("registrar_materia", materia);	
+	            } else {
+	                alert("Capture todos los campos.")
+	            }
 
-        }
+        	}
 
             let validarDatosMateria = (materia) => {
             /**
@@ -76,7 +75,7 @@
             if (materia["nombre"].length > 0) {
                 let validaMateria = /^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$/
                 let esValido = validaMateria.exec(materia["nombre"]);
-                alert(esValido)
+                
                 if (esValido == null) {
                     alert("El nombre de la materia no ha sido validado.");
                 } else {
@@ -86,9 +85,9 @@
             if (materia["numMaxCupo"].length > 0) {
                 let validaNumMaxCupo = /^[0-9]{1,2}$/
                 let esValido = validaNumMaxCupo.exec(materia["numMaxCupo"]);
-                alert(esValido)
+                
                 if (esValido == null || materia["numMaxCupo"] <= 0) {
-                    alert("El nÃºmero de cupos no ha sido validado.");
+                    alert("El número de cupos no ha sido validado.");
                 } else {
                     valido >>= 1;		
                 }
@@ -110,8 +109,14 @@
                 }
             }).
             then(respuesta => {
-                if (respuesta.status == 200) alert("La materia ha sido registrada.");
-                location.reload("/");
+                console.log(respuesta);
+                if (respuesta.ok == true) {
+                    if (respuesta.status == 200) alert("La materia ha sido registrada.")
+                    location.reload("/");
+                } else {
+                    alert("No se ha podido registrar la materia.");
+                }
+                
             }).
             catch(error => alert(error));
         } 
